Add new Cloud Run runner